Archive2/ee/d2e1bcf2ec58a0/output
main.cpp:7:81: error: parameter packs not expanded with '...':
 template <typename... IDs> using ExpandPack = Destination<A<IDs>::template B...>;
                                                                                 ^
main.cpp:7:81: note:         'IDs'
main.cpp: In function 'int main()':
main.cpp:16:5: error: 'ExpandPack' was not declared in this scope
     ExpandPack<IDA, IDB, IDC> destination_ida_idb_idc;
     ^
main.cpp:16:19: error: expected primary-expression before ',' token
     ExpandPack<IDA, IDB, IDC> destination_ida_idb_idc;
                   ^
main.cpp:16:24: error: expected primary-expression before ',' token
     ExpandPack<IDA, IDB, IDC> destination_ida_idb_idc;
                        ^
main.cpp:16:29: error: expected primary-expression before '>' token
     ExpandPack<IDA, IDB, IDC> destination_ida_idb_idc;
                             ^
main.cpp:16:31: error: 'destination_ida_idb_idc' was not declared in this scope
     ExpandPack<IDA, IDB, IDC> destination_ida_idb_idc;
                               ^
